<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <SurfaceView
        android:id="@+id/faceDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="300" />

    <!--    The weights for the surface and the LinearLayout below make NO sense but it does somehow create the right propotion on the tablet...-->


    <LinearLayout
        android:id="@+id/controlDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Color Selection"/>

            <TextView
                android:id="@+id/redLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Red" />

            <SeekBar
                android:id="@+id/redController"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255" />

            <TextView
                android:id="@+id/greenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Green" />

            <SeekBar
                android:id="@+id/greenController"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255" />

            <TextView
                android:id="@+id/blueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blue" />

            <SeekBar
                android:id="@+id/blueController"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hair_selection"/>
            <Spinner
                android:id="@+id/hairSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature_selection"/>

            <RadioButton
                android:id="@+id/hairToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hair" />

            <RadioButton
                android:id="@+id/eyeToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes" />

            <RadioButton
                android:id="@+id/skinToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skin" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/random_face"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>
